--- a/liuyun.css
+++ b/liuyun.css
@@ -21,7 +21,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('./image/back2.jpg');
+    background-image: url('back2.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -337,4 +337,5 @@ body::before {
             .product-item img {
                 height: 200px;
             }
+
         }
